--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "test": "nx test"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
-    "@nrwl/tao": "12.9.0",
     "@nrwl/cli": "12.9.0",
+    "@nrwl/node": "12.9.0",
+    "@nrwl/tao": "12.9.0",
     "@nrwl/workspace": "12.9.0",
     "@types/node": "14.14.33",
-    "typescript": "~4.3.5",
-    "prettier": "^2.3.1"
+    "prettier": "2.3.2",
+    "typescript": "~4.3.5"
   }
 }
