--- a/nx.json
+++ b/nx.json
@@ -1,7 +1,7 @@
 {
   "npmScope": "notion-stuff",
   "affected": {
-    "defaultBase": "master"
+    "defaultBase": "main"
   },
   "implicitDependencies": {
     "package.json": {
@@ -14,12 +14,7 @@
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
       "options": {
-        "cacheableOperations": [
-          "build",
-          "lint",
-          "test",
-          "e2e"
-        ]
+        "cacheableOperations": ["build", "lint", "test", "e2e"]
       }
     }
   },
@@ -31,5 +26,12 @@
       }
     ]
   },
-  "projects": {}
+  "projects": {
+    "blocks-html-parser": {
+      "tags": []
+    },
+    "scully-plugin-notion": {
+      "tags": []
+    }
+  }
 }
