--- a/package.json
+++ b/package.json
@@ -5,18 +5,40 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "commit": "git-cz"
   },
   "private": true,
   "dependencies": {
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@notionhq/client": "0.3.1",
     "@nrwl/cli": "12.9.0",
+    "@nrwl/eslint-plugin-nx": "12.9.0",
+    "@nrwl/jest": "12.9.0",
+    "@nrwl/linter": "12.9.0",
     "@nrwl/node": "12.9.0",
     "@nrwl/tao": "12.9.0",
     "@nrwl/workspace": "12.9.0",
+    "@scullyio/scully": "1.1.1",
+    "@types/jest": "26.0.24",
     "@types/node": "14.14.33",
+    "@typescript-eslint/eslint-plugin": "~4.28.3",
+    "@typescript-eslint/parser": "~4.28.3",
+    "commitizen": "4.2.4",
+    "cz-conventional-changelog": "3.3.0",
+    "cz-customizable": "6.3.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "27.0.3",
     "prettier": "2.3.2",
+    "ts-jest": "27.0.3",
     "typescript": "~4.3.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-customizable"
+    }
   }
 }
