--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
-    "build": "nx build",
     "test": "nx test",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "release": "release-it",
+    "build": "nx run-many --target=build --all --verbose",
+    "publish": "nx run-many --target=publish --all --parallel --verbose"
   },
   "private": true,
   "dependencies": {
@@ -21,6 +23,8 @@
     "@nrwl/node": "12.9.0",
     "@nrwl/tao": "12.9.0",
     "@nrwl/workspace": "12.9.0",
+    "@release-it/bumper": "3.0.1",
+    "@release-it/conventional-changelog": "3.3.0",
     "@scullyio/scully": "1.1.1",
     "@types/jest": "26.0.24",
     "@types/node": "14.14.33",
@@ -33,6 +37,7 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "27.0.3",
     "prettier": "2.3.2",
+    "release-it": "14.11.5",
     "ts-jest": "27.0.3",
     "typescript": "~4.3.5"
   },
