--- a/libs/blocks-html-parser/package.json
+++ b/libs/blocks-html-parser/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "@notionhq/client": "~0.3.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
