--- a/libs/scully-plugin-notion/package.json
+++ b/libs/scully-plugin-notion/package.json
@@ -4,5 +4,8 @@
   "dependencies": {
     "@notionhq/client": "~0.3.1",
     "@scullyio/scully": "~1.1.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
