feat(markdown): add markdown parser

--- a/nx.json
+++ b/nx.json
@@ -30,6 +30,9 @@
     "blocks-html-parser": {
       "tags": []
     },
+    "blocks-markdown-parser": {
+      "tags": []
+    },
     "scully-plugin-notion": {
       "tags": []
     }
