--- a/libs/scully-plugin-notion/package.json
+++ b/libs/scully-plugin-notion/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.4",
   "dependencies": {
     "@notionhq/client": "~0.3.1",
-    "@scullyio/scully": "~1.1.1"
+    "@scullyio/scully": "^2.0.0"
   },
   "publishConfig": {
     "access": "public"
