--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@release-it/conventional-changelog": "3.3.0",
     "@scullyio/scully": "2.0.0",
     "@types/jest": "26.0.24",
+    "@types/marked": "3.0.1",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.32.0",
     "@typescript-eslint/parser": "~4.32.0",
@@ -39,8 +40,11 @@
     "dotenv-cli": "4.0.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
+    "highlight.js": "11.2.0",
     "jest": "27.2.3",
+    "marked": "3.0.4",
     "prettier": "2.4.1",
+    "prismjs": "1.25.0",
     "release-it": "14.11.6",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5"
