--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
   },
   "devDependencies": {
     "@notionhq/client": "0.3.3",
-    "@nrwl/cli": "12.9.0",
-    "@nrwl/eslint-plugin-nx": "12.9.0",
-    "@nrwl/jest": "12.9.0",
-    "@nrwl/linter": "12.9.0",
-    "@nrwl/node": "12.9.0",
-    "@nrwl/tao": "12.9.0",
-    "@nrwl/workspace": "12.9.0",
+    "@nrwl/cli": "12.10.0",
+    "@nrwl/eslint-plugin-nx": "12.10.0",
+    "@nrwl/jest": "12.10.0",
+    "@nrwl/linter": "12.10.0",
+    "@nrwl/node": "12.10.0",
+    "@nrwl/tao": "12.10.0",
+    "@nrwl/workspace": "12.10.0",
     "@release-it/bumper": "3.0.1",
     "@release-it/conventional-changelog": "3.3.0",
     "@scullyio/scully": "2.0.0",
-    "@types/jest": "26.0.24",
+    "@types/jest": "27.0.2",
     "@types/marked": "3.0.1",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "~4.32.0",
-    "@typescript-eslint/parser": "~4.32.0",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
     "all-contributors-cli": "6.20.0",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "3.3.0",
@@ -55,3 +55,4 @@
     }
   }
 }
+
