--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@notionhq/client": "0.4.3",
+    "@notionhq/client": "~0.4.4",
     "@nrwl/cli": "12.10.0",
     "@nrwl/eslint-plugin-nx": "12.10.0",
     "@nrwl/jest": "12.10.0",
