--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -19,6 +19,15 @@
         "code",
         "doc"
       ]
+    },
+    {
+      "login": "barbados-clemens",
+      "name": "Caleb Ukle",
+      "avatar_url": "https://avatars.githubusercontent.com/u/23272162?v=4",
+      "profile": "https://github.com/barbados-clemens",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
