docs: add @MarcARoberge as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -28,6 +28,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "MarcARoberge",
+      "name": "MarcARoberge",
+      "avatar_url": "https://avatars.githubusercontent.com/u/12281920?v=4",
+      "profile": "https://github.com/MarcARoberge",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
