--- a/package.json
+++ b/package.json
@@ -19,31 +19,32 @@
   "devDependencies": {
     "@notionhq/client": "~0.4.11",
     "@nrwl/cli": "13.4.1",
-    "@nrwl/eslint-plugin-nx": "13.4.1",
-    "@nrwl/jest": "13.4.1",
-    "@nrwl/linter": "13.4.1",
-    "@nrwl/node": "13.4.1",
-    "@nrwl/tao": "13.4.1",
-    "@nrwl/workspace": "13.4.1",
+    "@nrwl/eslint-plugin-nx": "13.9.5",
+    "@nrwl/jest": "13.9.5",
+    "@nrwl/js": "13.9.5",
+    "@nrwl/linter": "13.9.5",
+    "@nrwl/node": "13.9.5",
+    "@nrwl/workspace": "13.9.5",
     "@release-it/bumper": "3.0.1",
     "@release-it/conventional-changelog": "3.3.0",
     "@scullyio/scully": "2.0.3",
     "@types/jest": "27.0.3",
     "@types/marked": "4.0.1",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "5.8.0",
-    "@typescript-eslint/parser": "5.8.0",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
     "all-contributors-cli": "6.20.0",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "cz-customizable": "6.3.0",
     "dotenv-cli": "4.1.1",
-    "eslint": "8.5.0",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
     "highlight.js": "11.3.1",
     "jest": "27.4.5",
     "marked": "4.0.8",
-    "prettier": "2.5.1",
+    "nx": "13.9.5",
+    "prettier": "2.6.1",
     "prismjs": "1.25.0",
     "release-it": "14.11.8",
     "ts-jest": "27.1.2",
