--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -37,6 +37,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "Panthaaaa",
+      "name": "Panthaaaa",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1465893?v=4",
+      "profile": "https://github.com/Panthaaaa",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
