chore: change yarn to pnpm

--- a/.release-it.json
+++ b/.release-it.json
@@ -41,6 +41,6 @@
     "releaseName": "Release ${version}"
   },
   "hooks": {
-    "after:bump": "yarn build"
+    "after:bump": "pnpm run build"
   }
 }
